# grammar-induction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.copier/: .copier-answers.copier-python-project.yml
.github/workflows/: lint-and-test.yml
data/: alergia_results  gig_results  learned_dfa.dot  lstar_results  rpni_results
data/1_is_third_from_end/: learned_dfa.dot
data/coin_toss/: learned_dfa.dot
data/even_a/: learned_dfa.dot
data/even_a_or_even_b/: learned_dfa.dot
src/: alergia_driver.py  driver.py  gig_driver.py  lstar_driver.py  plan.txt  pydot_driver.py  rpni_driver.py
src/data_generation/: datasets.py  transformations.py
src/experiments/: plan.txt
src/gig/: driver.py  genetic_operations.py  mca.py
src/l_star/: driver.py  learner.py  teacher.py
tests/test_gig/: test_genetic_operations.py  test_mca.py
